Base64 support jdk 11