@@ -1,12 +1,11 @@
 package com.yufeixuan.captcha;
 
-import sun.misc.BASE64Encoder;
-
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.util.Base64;
 
 import javax.imageio.ImageIO;
 
@@ -183,8 +182,8 @@ public class SpecCaptcha extends Captcha {
             g.dispose();
             ImageIO.write(bi, "png", out);
             stream.flush();
-            BASE64Encoder encode = new BASE64Encoder();
-            ok = encode.encode(stream.toByteArray());
+            byte[] encode = Base64.getEncoder().encode(stream.toByteArray());
+            ok = new String(encode);
         } catch (IOException e) {
             e.printStackTrace();
         } finally {
